code/force-app/main/default/objects/Group_ID_Code__c/Group_ID_Code__c.object-meta.xml
<CustomObject>
    <label>集團ID編碼表</label>
    <nameField>
        <displayFormat>NR-{0000}</displayFormat>
        <label>客戶ID編碼表 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>