code/force-app/main/default/objects/Group_ID_Code__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>當前值(已取號)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>