code/force-app/main/default/objects/Group_ID_Code__c/fields/Ending_Value__c.field-meta.xml
<CustomField>
    <fullName>Ending_Value__c</fullName>
    <label>終止值</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>