code/force-app/main/default/objects/Group_ID_Code__c/fields/Prefix_Fixed_Value__c.field-meta.xml
<CustomField>
    <fullName>Prefix_Fixed_Value__c</fullName>
    <label>前綴固定值</label>
    <length>10</length>
    <type>Text</type>
</CustomField>