code/force-app/main/default/objects/Group_ID_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID_Type__c</columns>
    <columns>Ending_Value__c</columns>
    <columns>Prefix_Fixed_Value__c</columns>
    <columns>Current_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>